// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`AlphaTexImporterNewTest barlines 1`] = `
Map {
  "__kind" => "Score",
  "masterbars" => Array [
    Map {
      "__kind" => "MasterBar",
    },
    Map {
      "__kind" => "MasterBar",
      "start" => 3840,
    },
  ],
  "tracks" => Array [
    Map {
      "__kind" => "Track",
      "staves" => Array [
        Map {
          "__kind" => "Staff",
          "bars" => Array [
            Map {
              "__kind" => "Bar",
              "id" => 0,
              "voices" => Array [
                Map {
                  "__kind" => "Voice",
                  "id" => 0,
                  "beats" => Array [
                    Map {
                      "__kind" => "Beat",
                      "id" => 0,
                      "isempty" => true,
                      "automations" => Array [
                        Map {
                          "islinear" => false,
                          "type" => 2,
                          "value" => 0,
                          "ratioposition" => 0,
                          "text" => "",
                        },
                      ],
                      "displayduration" => 960,
                      "playbackduration" => 960,
                    },
                  ],
                },
              ],
              "barlineleft" => 1,
              "barlineright" => 2,
            },
            Map {
              "__kind" => "Bar",
              "id" => 1,
              "voices" => Array [
                Map {
                  "__kind" => "Voice",
                  "id" => 1,
                  "beats" => Array [
                    Map {
                      "__kind" => "Beat",
                      "id" => 3,
                      "isempty" => true,
                      "displayduration" => 960,
                      "playbackduration" => 960,
                    },
                  ],
                },
              ],
              "barlineleft" => 4,
              "barlineright" => 4,
            },
          ],
        },
        Map {
          "__kind" => "Staff",
          "bars" => Array [
            Map {
              "__kind" => "Bar",
              "id" => 2,
              "voices" => Array [
                Map {
                  "__kind" => "Voice",
                  "id" => 2,
                  "beats" => Array [
                    Map {
                      "__kind" => "Beat",
                      "id" => 1,
                      "isempty" => true,
                      "displayduration" => 960,
                      "playbackduration" => 960,
                    },
                  ],
                },
              ],
              "barlineleft" => 7,
              "barlineright" => 6,
            },
            Map {
              "__kind" => "Bar",
              "id" => 3,
              "voices" => Array [
                Map {
                  "__kind" => "Voice",
                  "id" => 3,
                  "beats" => Array [
                    Map {
                      "__kind" => "Beat",
                      "id" => 2,
                      "isempty" => true,
                      "displayduration" => 960,
                      "playbackduration" => 960,
                    },
                  ],
                },
              ],
              "barlineleft" => 5,
              "barlineright" => 1,
            },
          ],
        },
      ],
      "playbackinfo" => Map {
        "secondarychannel" => 1,
      },
      "name" => "T1",
      "shortname" => "T1",
    },
  ],
}
`;

exports[`AlphaTexImporterNewTest errors at209 accidentalmode: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 accidentalmode: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 accidentalmode: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 21,
      "line": 1,
      "offset": 20,
    },
    "message": "Unexpected accidental mode value 'invalid', expected: auto,explicit",
    "severity": 2,
    "start": Object {
      "col": 14,
      "line": 1,
      "offset": 13,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 articulation: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 articulation: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 articulation: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 23,
      "line": 1,
      "offset": 22,
    },
    "message": "Unexpected articulation value '0', expected: 38,37,91,42,92,46,44,35,36,50,48,47,45,43,93,51,53,94,55,95,52,96,49,97,57,98,99,100,56,101,102,103,77,76,60,104,105,61,106,107,66,65,68,67,64,108,109,63,110,62,72,71,73,74,86,87,54,111,112,113,79,78,58,81,80,114,115,116,69,117,85,75,70,118,119,120,82,122,84,123,83,124,125,39,40,31,41,59,126,127,29,30,33,34",
    "severity": 2,
    "start": Object {
      "col": 22,
      "line": 1,
      "offset": 21,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 bar optional: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 bar optional: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 bar optional: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 18,
      "line": 1,
      "offset": 17,
    },
    "message": "Unexpected additional value 'NumberLiteral', expected: required(StringLiteral|Identifier),optional(StringLiteral|Identifier)",
    "severity": 2,
    "start": Object {
      "col": 17,
      "line": 1,
      "offset": 16,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 bar required: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 bar required: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 bar required: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 10,
      "line": 1,
      "offset": 9,
    },
    "message": "Unexpected required value 'StringLiteral', expected: required(NumberLiteral)",
    "severity": 2,
    "start": Object {
      "col": 8,
      "line": 1,
      "offset": 7,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 barre: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 barre: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 barre: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 21,
      "line": 1,
      "offset": 20,
    },
    "message": "Unexpected barre shape value 'invalid', expected: full,half",
    "severity": 2,
    "start": Object {
      "col": 14,
      "line": 1,
      "offset": 13,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 beam: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 beam: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 beam: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 19,
      "line": 1,
      "offset": 18,
    },
    "message": "Unexpected beam value 'invalid', expected: invert,up,down,auto,split,merge,splitsecondary",
    "severity": 2,
    "start": Object {
      "col": 12,
      "line": 1,
      "offset": 11,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 beat tuplet: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 beat tuplet: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 beat tuplet: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 11,
      "line": 1,
      "offset": 10,
    },
    "message": "Unexpected default tuplet value '0', expected: 3, 5, 6, 7, 9, 10, 11 or 12",
    "severity": 2,
    "start": Object {
      "col": 10,
      "line": 1,
      "offset": 9,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 bendstyle: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 bendstyle: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 bendstyle: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 19,
      "line": 1,
      "offset": 18,
    },
    "message": "Unexpected bend style value 'invalid', expected: gradual,fast,default",
    "severity": 2,
    "start": Object {
      "col": 12,
      "line": 1,
      "offset": 11,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 bendtype: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 bendtype: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 bendtype: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 14,
      "line": 1,
      "offset": 13,
    },
    "message": "Unexpected bend type value 'invalid', expected: none,custom,bend,release,bendrelease,hold,prebend,prebendbend,prebendrelease",
    "severity": 2,
    "start": Object {
      "col": 7,
      "line": 1,
      "offset": 6,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 bracketextendmode: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 bracketextendmode: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 bracketextendmode: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 27,
      "line": 1,
      "offset": 26,
    },
    "message": "Unexpected bracket extend mode value 'invalid', expected: nobrackets,groupstaves,groupsimilarinstruments",
    "severity": 2,
    "start": Object {
      "col": 20,
      "line": 1,
      "offset": 19,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 duration tuplet: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 duration tuplet: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 duration tuplet: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 11,
      "line": 1,
      "offset": 10,
    },
    "message": "Unexpected default tuplet value '0', expected: 3, 5, 6, 7, 9, 10, 11 or 12",
    "severity": 2,
    "start": Object {
      "col": 10,
      "line": 1,
      "offset": 9,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 dynamic: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 dynamic: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 dynamic: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 15,
      "line": 1,
      "offset": 14,
    },
    "message": "Unexpected dynamic value 'invalid', expected: ppp,pp,p,mp,mf,f,ff,fff,pppp,ppppp,pppppp,ffff,fffff,ffffff,sf,sfp,sfpp,fp,rf,rfz,sfz,sffz,fz,n,pf,sfzp",
    "severity": 2,
    "start": Object {
      "col": 8,
      "line": 1,
      "offset": 7,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 fermata: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 fermata: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 fermata: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 21,
      "line": 1,
      "offset": 20,
    },
    "message": "Unexpected fermata value 'invalid', expected: short,medium,long",
    "severity": 2,
    "start": Object {
      "col": 14,
      "line": 1,
      "offset": 13,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 firstsystemtracknamemode: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 firstsystemtracknamemode: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 firstsystemtracknamemode: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 34,
      "line": 1,
      "offset": 33,
    },
    "message": "Unexpected track name mode value 'invalid', expected: fullname,shortname",
    "severity": 2,
    "start": Object {
      "col": 27,
      "line": 1,
      "offset": 26,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 firstsystemtracknameorientation: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 firstsystemtracknameorientation: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 firstsystemtracknameorientation: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 41,
      "line": 1,
      "offset": 40,
    },
    "message": "Unexpected track name orientation value 'invalid', expected: horizontal,vertical",
    "severity": 2,
    "start": Object {
      "col": 34,
      "line": 1,
      "offset": 33,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 gracetype: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 gracetype: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 gracetype: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 16,
      "line": 1,
      "offset": 15,
    },
    "message": "Unexpected whammy style value 'invalid', expected: ob,b,bb",
    "severity": 2,
    "start": Object {
      "col": 9,
      "line": 1,
      "offset": 8,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 multitracktracknamepolicy: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 multitracktracknamepolicy: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 multitracktracknamepolicy: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 35,
      "line": 1,
      "offset": 34,
    },
    "message": "Unexpected track name policy value 'invalid', expected: hidden,firstsystem,allsystems",
    "severity": 2,
    "start": Object {
      "col": 28,
      "line": 1,
      "offset": 27,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 othersystemstracknamemode: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 othersystemstracknamemode: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 othersystemstracknamemode: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 35,
      "line": 1,
      "offset": 34,
    },
    "message": "Unexpected track name mode value 'invalid', expected: fullname,shortname",
    "severity": 2,
    "start": Object {
      "col": 28,
      "line": 1,
      "offset": 27,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 othersystemstracknameorientation: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 othersystemstracknameorientation: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 othersystemstracknameorientation: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 41,
      "line": 1,
      "offset": 40,
    },
    "message": "Unexpected track name orientation value 'invalid', expected: horizontal,vertical",
    "severity": 2,
    "start": Object {
      "col": 34,
      "line": 1,
      "offset": 33,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 ottava: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 ottava: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 ottava: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 15,
      "line": 1,
      "offset": 14,
    },
    "message": "Unexpected ottava value 'invalid', expected: 15ma,8va,regular,8vb,15mb",
    "severity": 2,
    "start": Object {
      "col": 8,
      "line": 1,
      "offset": 7,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 rasg: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 rasg: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 rasg: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 17,
      "line": 1,
      "offset": 16,
    },
    "message": "Unexpected rasgueado pattern value 'invalid', expected: ii,mi,miitriplet,miianapaest,pmptriplet,pmpanapaest,peitriplet,peianapaest,paitriplet,paianapaest,amitriplet,amianapaest,ppp,amii,amip,eami,eamii,peami",
    "severity": 2,
    "start": Object {
      "col": 10,
      "line": 1,
      "offset": 9,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 score optional: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 score optional: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 score optional: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 18,
      "line": 1,
      "offset": 17,
    },
    "message": "Unexpected additional value 'NumberLiteral', expected: required(StringLiteral|Identifier),optional(StringLiteral|Identifier),optional(StringLiteral|Identifier)",
    "severity": 2,
    "start": Object {
      "col": 17,
      "line": 1,
      "offset": 16,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 score required: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 score required: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 score required: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 10,
      "line": 1,
      "offset": 9,
    },
    "message": "Unexpected required value 'NumberLiteral', expected: required(StringLiteral|Identifier)",
    "severity": 2,
    "start": Object {
      "col": 9,
      "line": 1,
      "offset": 8,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 singletracktracknamepolicy: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 singletracktracknamepolicy: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 singletracktracknamepolicy: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 36,
      "line": 1,
      "offset": 35,
    },
    "message": "Unexpected track name policy value 'invalid', expected: hidden,firstsystem,allsystems",
    "severity": 2,
    "start": Object {
      "col": 29,
      "line": 1,
      "offset": 28,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 textalign: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 textalign: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 textalign: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 25,
      "line": 1,
      "offset": 24,
    },
    "message": "Unexpected textAlign value 'invalid', expected: left,center,right",
    "severity": 2,
    "start": Object {
      "col": 18,
      "line": 1,
      "offset": 17,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 tremolo speed: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 tremolo speed: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 tremolo speed: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 11,
      "line": 1,
      "offset": 10,
    },
    "message": "Unexpected tremolo speed value '0, expected: 8, 16 or 32",
    "severity": 2,
    "start": Object {
      "col": 10,
      "line": 1,
      "offset": 9,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 trill: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 trill: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 trill: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 14,
      "line": 1,
      "offset": 13,
    },
    "message": "Unexpected trill duration value '0', expected: 16, 32 or 64",
    "severity": 2,
    "start": Object {
      "col": 13,
      "line": 1,
      "offset": 12,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 tuning: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 tuning: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 tuning: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 16,
      "line": 1,
      "offset": 15,
    },
    "message": "Unexpected tuning value 'Invalid', expected: <note><accidental><octave> where <note>=oneOf(67,68,69,70,71,65,66,99,100,101,102,103,97,98,35) <accidental>=oneOf(default,d,forcenone,-,forcenatural,n,forcesharp,#,forcedoublesharp,##,x,forceflat,b,forcedoubleflat,bb), <octave>=number",
    "severity": 2,
    "start": Object {
      "col": 9,
      "line": 1,
      "offset": 8,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 whammybarstyle: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 whammybarstyle: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 whammybarstyle: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 20,
      "line": 1,
      "offset": 19,
    },
    "message": "Unexpected whammy style value 'invalid', expected: gradual,fast,default",
    "severity": 2,
    "start": Object {
      "col": 13,
      "line": 1,
      "offset": 12,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at209 whammybartype: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 whammybartype: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at209 whammybartype: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 209,
    "end": Object {
      "col": 15,
      "line": 1,
      "offset": 14,
    },
    "message": "Unexpected whammy type value 'invalid', expected: none,custom,dive,dip,hold,predive,predivedive",
    "severity": 2,
    "start": Object {
      "col": 8,
      "line": 1,
      "offset": 7,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at210 bar empty: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at210 bar empty: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at210 bar empty: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 210,
    "end": Object {
      "col": 9,
      "line": 1,
      "offset": 8,
    },
    "message": "Missing values. Expected following values: required(NumberLiteral)",
    "severity": 2,
    "start": Object {
      "col": 9,
      "line": 1,
      "offset": 8,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at210 bar missing: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at210 bar missing: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at210 bar missing: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 210,
    "end": Object {
      "col": 10,
      "line": 1,
      "offset": 9,
    },
    "message": "Missing values. Expected following values: required(NumberLiteral)",
    "severity": 2,
    "start": Object {
      "col": 10,
      "line": 1,
      "offset": 9,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest errors at210 score empty: lexer-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at210 score empty: parser-diagnostics 1`] = `Array []`;

exports[`AlphaTexImporterNewTest errors at210 score empty: semantic-diagnostics 1`] = `
Array [
  Object {
    "code": 210,
    "end": Object {
      "col": 10,
      "line": 1,
      "offset": 9,
    },
    "message": "Missing values. Expected following values: required(StringLiteral|Identifier)",
    "severity": 2,
    "start": Object {
      "col": 10,
      "line": 1,
      "offset": 9,
    },
  },
]
`;

exports[`AlphaTexImporterNewTest sync 1`] = `
Map {
  "__kind" => "Score",
  "tempo" => 90,
  "masterbars" => Array [
    Map {
      "__kind" => "MasterBar",
      "tempoautomations" => Array [
        Map {
          "islinear" => false,
          "type" => 0,
          "value" => 90,
          "ratioposition" => 0,
          "text" => "",
        },
      ],
      "syncpoints" => Array [
        Map {
          "islinear" => false,
          "type" => 4,
          "value" => 0,
          "syncpointvalue" => Map {
            "baroccurence" => 0,
            "millisecondoffset" => 0,
          },
          "ratioposition" => 0,
          "text" => "",
        },
        Map {
          "islinear" => false,
          "type" => 4,
          "value" => 0,
          "syncpointvalue" => Map {
            "baroccurence" => 0,
            "millisecondoffset" => 1000,
          },
          "ratioposition" => 0.5,
          "text" => "",
        },
      ],
    },
    Map {
      "__kind" => "MasterBar",
      "syncpoints" => Array [
        Map {
          "islinear" => false,
          "type" => 4,
          "value" => 0,
          "syncpointvalue" => Map {
            "baroccurence" => 0,
            "millisecondoffset" => 2000,
          },
          "ratioposition" => 0,
          "text" => "",
        },
      ],
      "start" => 3840,
    },
    Map {
      "__kind" => "MasterBar",
      "isrepeatstart" => true,
      "start" => 7680,
    },
    Map {
      "__kind" => "MasterBar",
      "syncpoints" => Array [
        Map {
          "islinear" => false,
          "type" => 4,
          "value" => 0,
          "syncpointvalue" => Map {
            "baroccurence" => 0,
            "millisecondoffset" => 3000,
          },
          "ratioposition" => 0,
          "text" => "",
        },
        Map {
          "islinear" => false,
          "type" => 4,
          "value" => 0,
          "syncpointvalue" => Map {
            "baroccurence" => 1,
            "millisecondoffset" => 4000,
          },
          "ratioposition" => 0,
          "text" => "",
        },
      ],
      "start" => 11520,
    },
    Map {
      "__kind" => "MasterBar",
      "repeatcount" => 2,
      "start" => 15360,
    },
    Map {
      "__kind" => "MasterBar",
      "start" => 19200,
    },
    Map {
      "__kind" => "MasterBar",
      "syncpoints" => Array [
        Map {
          "islinear" => false,
          "type" => 4,
          "value" => 0,
          "syncpointvalue" => Map {
            "baroccurence" => 1,
            "millisecondoffset" => 5000,
          },
          "ratioposition" => 0,
          "text" => "",
        },
      ],
      "start" => 23040,
    },
  ],
}
`;

exports[`AlphaTexImporterNewTest sync-expect-dot 1`] = `
Map {
  "__kind" => "Score",
  "artist" => "J.S. Bach (1685-1750)",
  "copyright" => "Public Domain",
  "title" => "Prelude in D Minor",
  "tempo" => 80,
  "masterbars" => Array [
    Map {
      "__kind" => "MasterBar",
      "timesignaturenumerator" => 3,
      "tempoautomations" => Array [
        Map {
          "islinear" => false,
          "type" => 0,
          "value" => 80,
          "ratioposition" => 0,
          "text" => "",
        },
      ],
      "syncpoints" => Array [
        Map {
          "islinear" => false,
          "type" => 4,
          "value" => 0,
          "syncpointvalue" => Map {
            "baroccurence" => 0,
            "millisecondoffset" => 0,
          },
          "ratioposition" => 0,
          "text" => "",
        },
        Map {
          "islinear" => false,
          "type" => 4,
          "value" => 0,
          "syncpointvalue" => Map {
            "baroccurence" => 0,
            "millisecondoffset" => 1500,
          },
          "ratioposition" => 0.666,
          "text" => "",
        },
      ],
    },
    Map {
      "__kind" => "MasterBar",
      "timesignaturenumerator" => 3,
      "syncpoints" => Array [
        Map {
          "islinear" => false,
          "type" => 4,
          "value" => 0,
          "syncpointvalue" => Map {
            "baroccurence" => 0,
            "millisecondoffset" => 4075,
          },
          "ratioposition" => 0.666,
          "text" => "",
        },
      ],
      "start" => 2880,
    },
    Map {
      "__kind" => "MasterBar",
      "timesignaturenumerator" => 3,
      "syncpoints" => Array [
        Map {
          "islinear" => false,
          "type" => 4,
          "value" => 0,
          "syncpointvalue" => Map {
            "baroccurence" => 0,
            "millisecondoffset" => 6475,
          },
          "ratioposition" => 0.333,
          "text" => "",
        },
      ],
      "start" => 5760,
    },
    Map {
      "__kind" => "MasterBar",
      "timesignaturenumerator" => 3,
      "syncpoints" => Array [
        Map {
          "islinear" => false,
          "type" => 4,
          "value" => 0,
          "syncpointvalue" => Map {
            "baroccurence" => 0,
            "millisecondoffset" => 10223,
          },
          "ratioposition" => 1,
          "text" => "",
        },
      ],
      "start" => 8640,
    },
  ],
}
`;
